[package]
name = "rust-fel-portfolio"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"
repository = "https://github.com/tostaylo/tostaylo.github.io"
description = "My portfolio site built with rust-wasm and rust-fel"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.62"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
rust-fel = "0.1.0"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'Window',
  'ScrollToOptions',
]

[profile.release]
lto = true
opt-level = 3
