[package]
name = "rust-fel-portfolio"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"
repository = "https://github.com/tostaylo/tostaylo.github.io"
description = "Torre Taylor's portfolio site built with rust-wasm and rust-fel"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.99"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
rust-fel = "0.1.2"

[dependencies.web-sys]
version = "0.3.76"
features = [
  'Window',
  'ScrollToOptions',
  'Storage',
]

[profile.release]
lto = true
opt-level = 3
