[package]
name = "psi-app"
version = "0.1.0"
authors = ["Torre Taylor"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"

[dependencies.rust-fel]
git = "https://github.com/tostaylo/rust-fel"


[dependencies.web-sys]
version = "0.3.44"
features = [
  'Document', 
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
]

[profile.release]
lto = true
